# cyient

./: .gitattributes  .gitignore  CLAUDE.md  README.md  environment.yml
guide/: 01_ros2_gazebo_setup.md  02_medical_datasets.md  03_perception_pipeline.md  04_robot_arm_model.md  05_moveit2_motion_planning.md  06_ros2_node_architecture.md  07_exoskeleton_extension.md
manipulators/: README.md
notebooks/: quantize_sam_to_onnx.ipynb  train_sam_carotid_lightning.ipynb
results/: benchmarks_fp32.json  benchmarks_int8.json
results/sam_onnx/: prompt_encoder_mask_decoder.int8.onnx  quant_metadata.json  vision_encoder.int8.onnx
ros2_ws/src/catheter_sim/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/catheter_sim/catheter_sim/: __init__.py  arm_controller.py  image_publisher.py  target_planner.py  vessel_detector.py
ros2_ws/src/catheter_sim/config/: catheter_sim.rviz  controllers.yaml
ros2_ws/src/catheter_sim/config/moveit_config/: catheter_arm.srdf  joint_limits.yaml
ros2_ws/src/catheter_sim/launch/: full_system.launch.py  sim.launch.py
ros2_ws/src/catheter_sim/msg/: VesselDetection.msg
ros2_ws/src/catheter_sim/urdf/: catheter_arm.urdf.xacro
ros2_ws/src/catheter_sim/worlds/: catheter_world.sdf
ros2_ws/src/gait_intent/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/gait_intent/config/: params.yaml
ros2_ws/src/gait_intent/gait_intent/: __init__.py  classifier.py  control_fsm.py  data_loader.py  evaluate.py  gait_ros2_node.py  preprocess.py  train.py
ros2_ws/src/gait_intent/scripts/: run_pipeline.py
scripts/: capture_screenshots.sh
splits/: test.csv  train.csv  val.csv
