<?xml version="1.0"?>
<package format="3">
  <name>catheter_sim</name>
  <version>0.1.0</version>
  <description>Robotic arm simulation for femoral artery catheterization guidance</description>
  <maintainer email="gokul@example.com">Gokul Soman</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- ROS2 runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Simulation -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <!-- Control -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gz_ros2_control</depend>

  <!-- Motion planning -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>

  <!-- Robot description -->
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
